--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<h1>{{ title }}</h1>
+<!-- <h1>{{ title }}</h1>
 <app-counter/>
 <hr>
 <app-heroes-heroe/>
 <hr>
 <app-heroes-list/>
+<hr> -->
+<app-main-page/>
 
